# text-classification-pytorch

./: .gitignore  README.md  pyproject.toml
data/: fake_news_sample.csv
src/: __init__.py  arguments.py  config.py  constants.py  main.py
src/batch/: arguments.py  main.py
src/batch/elements/: sink.py  source.py  transform.py
src/batch/ops/: burden.py  doc.py  functions.py
src/batch/ops/graph/: map.py  nodes.py  remove.py  text.py
src/batch/ops/io/: files.py  wm.py
src/batch/ops/text/: vocabulary.py
src/data/: dataset.py  iterator.py  simple_text_dataset.py  text_dataset.py
src/io/: model.py
src/models/: __init__.py  electra_classifier.py  legalbert_classifier.py  roberta_classifier.py  roberta_pooled_classifier.py  xlnet_classifier.py
src/ops/: evaluation.py  loss.py  metrics.py  prediction.py  sample.py  weights.py
src/processes/: pretrain.py  train.py
src/text/: dataset.py  iterator.py  tokenizer.py
src/tokenizer/: __init__.py  electra.py  legalbert.py  roberta.py  xlnet.py
src/utils/: checkpoints.py  directories.py  metrics.py
src/viz/: metrics.py
tests/functional/: test_classification.py
tests/unit/batch/ops/: test_burden.py
tests/unit/ops/: test_sample.py  test_weights.py
