[tool.poetry]
name = "pytorch-roberta-classifier"
version = "0.1.0"
description = ""
authors = ["raufer <raufer92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
spacy = "^2.3.4"
matplotlib = "^3.3.3"
seaborn = "^0.11.0"
pytest = "^6.1.2"
torch = "1.7.0"
transformers = "3"
scikit-learn = "^0.23.2"
torchtext = "0.8"
networkx = "1.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
